--- a/src/style.css
+++ b/src/style.css
@@ -13,21 +13,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  height: 100vh;
+  overflow: hidden !important;
+  position: fixed;
+  width: 100vw;
+  overscroll-behavior: none;
+  touch-action: none;
 }
 
 h1 {
@@ -46,13 +43,6 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
 .card {
   padding: 2em;
@@ -61,6 +51,15 @@ button:focus-visible {
 #app {
   box-sizing: border-box;
   text-align: center;
+}
+
+.main-container {
+  height: 100vh;
+  min-height: 100vh;
+  overflow: hidden !important;
+  position: fixed;
+  width: 100vw;
+  top: 0; left: 0;
 }
 
 @media (prefers-color-scheme: light) {
